# negotiation-mechanism-replay

./: .gitignore  AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
config/: mechanism_taxonomy.yaml  redact_denylist.yaml.example  repo_index.yaml
docs/: first-pr.md  product-brief.md  system-map.md
examples/: 2026-07-procurement-EXAMPLE.md
negotiation_mechanism_replay/: __init__.py  __main__.py  cli.py  model.py  scoring.py
negotiations/: 2026-07-procurement-01.md
reports/: 2026-07-procurement-01.jsonl
schemas/: replay.schema.json
scripts/: redact_check.py  spec_check.py  validate_replay_schema.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  ledger.md  requirements.md  tasks.md
src/replay/: __init__.py  __main__.py  cli.py  matcher.py  redactor.py  render.py  schema.py
tests/: test_matcher.py  test_redactor.py  test_render_roundtrip.py  test_schema.py  test_show.py
